--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,8 @@ spring.mail.scheduler.persistence.redis.enabled=false
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.starttls.required=true
+
+#####Cloudinary
+cloudinary.cloudname=dm0hfb42e
+cloudinary.apisecret=vei6vKMtveGrKcwvHeNR_bTqji0
+cloudinary.apikey=668528822791487
